# DroCap

./: README.md
MeshPartition/: .gitignore  CMakeLists.txt  package.xml
MeshPartition/datasets/: apartment_filtered.ply  apartment_target.ply
MeshPartition/include/: covariance.h  partition.h  pca.h  qemquadrics.h
MeshPartition/launch/: filter_and_where_to_perch.sh  islands.mlx  launch_cpo.launch  quadric.mlx  reconstruction_and_where_to_perch.sh  remove_duplicate_faces.mlx  remove_duplicates_and_laplacian_smooth.mlx  remove_duplicates_islands_smooth_and_decimate.mlx  remove_duplicates_islands_smooth_and_decimate2.mlx  remove_duplicates_islands_smooth_and_decimate3.mlx  run_filtering.sh  run_filtering2.sh  run_filtering3.sh  run_reconstruction.sh  test-cluster.txt  where_to_perch.sh
MeshPartition/msg/: DenseEnvironment.msg  MeshEnvironment.msg  PerchTarget.msg
MeshPartition/src/: mesh_partition_node.cpp
MeshPartition/src/common/: covariance.cpp
MeshPartition/src/mesh_partition/: CMakeLists.txt  main.cpp  partition.cpp
PerchPlacement/: CMakeLists.txt  package.xml  setup.py
PerchPlacement/launch/: mesh_publisher.launch  perch_placement.launch  where_to_perch.launch  where_to_perch_start_nodes.launch
PerchPlacement/src/: .gitignore  README.md  requirements.txt  setup.py
PerchPlacement/src/config/: opt.ini
PerchPlacement/src/docs/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
PerchPlacement/src/docs/.doctrees/: environment.pickle  index.doctree
PerchPlacement/src/docs/_sources/: index.rst.txt
PerchPlacement/src/docs/_static/: jquery-3.4.1.js
PerchPlacement/src/docs/source/: conf.py  index.rst
PerchPlacement/src/geom/: geometry2d.py  geometry3d.py  tools.py
PerchPlacement/src/opt/: optimization_options.py
PerchPlacement/src/pso/: pso_functions.py
PerchPlacement/src/scripts/: camera_distortion_visualization.py  optimization_testing.py  optimize_ros.py  plot_uncertainty_ellipsoids.py  visualize_environments.py  where_to_perch.py
PerchPlacement/src/sim/: cameras.py  environment.py  environment_data.py  evaluate.py  initialize.py
PerchPlacement/src/tools/: tools.py
PerchPlacement/src/ui/: perch_confirmation.py  select_target.py  surface_confirmation.py  surface_confirmation_demo.py
PerchPlacement/src/ui/models/: iris_mesh.mlp  iris_mesh_merged.mlp  iris_mesh_merged_colored.mlp  iris_prop_ccw2.dae  iris_prop_cw2.dae
PerchPlacement/src/vis/: draw2d.py  draw3d.py
Simulation/models/ar_cube_0-5/: model.config  model.sdf
Simulation/models/ar_cube_0-5/meshes/: ar_cube_0-5.blend  ar_cube_0-5.dae
Simulation/models/ar_cube_12-17/: model.config  model.sdf
Simulation/models/ar_cube_12-17/meshes/: ar_cube_12-17.blend  ar_cube_12-17.dae
Simulation/models/ar_cube_18-23/: model.config  model.sdf
Simulation/models/ar_cube_18-23/meshes/: ar_cube_18-23.blend  ar_cube_18-23.dae
Simulation/models/ar_cube_24-29/: model.config  model.sdf
Simulation/models/ar_cube_24-29/meshes/: ar_cube_24-29.blend  ar_cube_24-29.dae
Simulation/models/ar_cube_6-11/: model.config  model.sdf
Simulation/models/ar_cube_6-11/meshes/: ar_cube_6-11.blend  ar_cube_6-11.dae
Simulation/models/mit_32/: mit_32.sdf  model.config
