<?xml version="1.0"?>
<package format="2">
  <name>mesh_partition</name>
  <version>0.0.0</version>
  <description>The mesh_partition ROS package, based on the mesh_partition module developed by Wang et al. (see: https://github.com/chaowang15/plane-opt-rgbd for more information) </description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="simon.honigmann@epfl.ch">Simon</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin_simple</buildtool_depend>  <!-- not sure if this is required... -->
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>std_msgs</exec_depend>

  <build_depend>message_generation</build_depend>
  <build_export_depend>message_generation</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>rospy</depend>
  <depend>roscpp</depend>
  <build_depend>cmake_modules</build_depend>

  <export>

  </export>
</package>
